--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/airdropinsiders/Stork-Auto-Bot.git"
+    "url": "https://github.com/Myatt777/Stork.git"
   },
   "keywords": [
     "stork",
@@ -22,7 +22,7 @@
   "author": "Airdrop Insiders",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/airdropinsiders/Stork-Auto-Bot/issues"
+    "url": "https://github.com/Myatt777/Stork.git"
   },
   "homepage": "https://github.com/",
   "dependencies": {
